--- a/src/assets/css/paper-kit.css
+++ b/src/assets/css/paper-kit.css
@@ -1887,9 +1887,9 @@ License - nucleoapp.com/license/
   font-family: "nucleo-icons";
   src: url("../fonts/nucleo-icons.eot");
   src: url("../fonts/nucleo-icons.eot") format("embedded-opentype"),
-    url("~assets/fonts/nucleo-icons.woff2") format("woff2"),
-    url("~assets/fonts/nucleo-icons.woff") format("woff"),
-    url("~assets/fonts/nucleo-icons.ttf") format("truetype");
+    url("../fonts/nucleo-icons.woff2") format("woff2"),
+    url("../fonts/nucleo-icons.woff") format("woff"),
+    url("../fonts/nucleo-icons.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -14382,9 +14382,9 @@ License - nucleoapp.com/license/
   font-family: "nucleo-icons";
   src: url("../fonts/nucleo-icons.eot");
   src: url("../fonts/nucleo-icons.eot") format("embedded-opentype"),
-    url("~assets/fonts/nucleo-icons.woff2") format("woff2"),
-    url("~assets/fonts/nucleo-icons.woff") format("woff"),
-    url("~assets/fonts/nucleo-icons.ttf") format("truetype");
+    url("../fonts/nucleo-icons.woff2") format("woff2"),
+    url("../fonts/nucleo-icons.woff") format("woff"),
+    url("../fonts/nucleo-icons.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
