--- a/src/assets/css/paper-kit.css
+++ b/src/assets/css/paper-kit.css
@@ -10069,7 +10069,7 @@ video {
 .pswp__button,
 .pswp__button--arrow--left:before,
 .pswp__button--arrow--right:before {
-  background: url(~assets/img/photo_swipe/default-skin.png) 0 0 no-repeat;
+  /* background: url(~assets/img/photo_swipe/default-skin.png) 0 0 no-repeat; */
   background-size: 264px 88px;
   width: 44px;
   height: 44px;
@@ -10081,9 +10081,9 @@ video {
   (min-resolution: 1.1dppx) {
   .pswp--svg .pswp__button,
   .pswp--svg .pswp__button--arrow--left:before,
-  .pswp--svg .pswp__button--arrow--right:before {
+  /* .pswp--svg .pswp__button--arrow--right:before {
     background-image: url(~assets/img/photo_swipe/default-skin.svg);
-  }
+  } */
   .pswp--svg .pswp__button--arrow--left,
   .pswp--svg .pswp__button--arrow--right {
     background: 0 0;
@@ -12043,9 +12043,9 @@ a.pswp__share--download:hover {
   margin-top: 15px;
 }
 
-.blog-post .blog-header-image {
+/* .blog-post .blog-header-image {
   background-image: url("{{ path-general }}/assets/img{{ site.product_path }}/farid-askerov.jpg");
-}
+} */
 
 .blog-post .navbar input {
   background-color: rgba(255, 255, 255, 0.17);
